# sfai-sdk

./: .gitignore  .pre-commit-config.yaml  .strata.yml  CONTRIBUTING.md  Makefile  README.md  TERMS OF USE  mkdocs.yml  pyproject.toml  pytest.ini  pyvenv.cfg  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  deploy.yaml  docs.yaml
docs/: SFAI_notebook.ipynb  contributing.md  core-architecture.md  faq.md  index.md
docs/api/: README.md  modules.md  overview.md
docs/cli/: README.md  commands.md  overview.md
docs/getting-started/: README.md  installation.md  quickstart.md
docs/javascripts/: extra.js  tablesort.js
docs/stylesheets/: extra.css
docs/usecases/: heroku-deployment.ipynb  local-deployment.ipynb
sfai/: constants.py  main.py
sfai/app/: __init__.py  context.py  delete.py  deploy.py  helm.py  init.py  logs.py  open.py  publish.py  status.py
sfai/app/utils/: helpers.py  scaffold.py
sfai/cli/app/: __init__.py  context.py  delete.py  deploy.py  helm.py  init.py  logs.py  open.py  publish.py  status.py
sfai/cli/config/: __init__.py  delete.py  init.py  list.py  update.py  view.py
sfai/cli/platform/: __init__.py  init.py  switch.py
sfai/config/: __init__.py  delete.py  init.py  list.py  registry.py  update.py  view.py
sfai/config/schemas/: mulesoft.py
sfai/config/utils/: validate.py
sfai/context/: manager.py  models.py
sfai/core/: __init__.py  base.py  decorators.py  response_models.py
sfai/core/agentforce/: __init__.py  decorators.py  generator.py  helper.py
sfai/core/templates/fastapi_hello/: Dockerfile  app.py  openapi.yaml  requirements.txt
sfai/integrations/: registry.py
sfai/integrations/mulesoft/: agentforce_utils.py  core.py  publish.py  publish_cli.py  utils.py
sfai/platform/: __init__.py  init.py  registry.py  switch.py
sfai/platform/providers/eks/: platform.py
sfai/platform/providers/eks/utils/: checks.py  helpers.py
sfai/platform/providers/heroku/: platform.py
sfai/platform/providers/heroku/utils/: checks.py  deploy.py
sfai/platform/providers/kubernetes/: platform.py
sfai/platform/providers/kubernetes/charts/default/: Chart.yaml  values.yaml
sfai/platform/providers/kubernetes/charts/default/templates/: deployment.yaml  ingress.yaml
sfai/platform/providers/kubernetes/utils/: checks.py  helpers.py
sfai/platform/providers/local/: platform.py  utils.py
sfai/platform/providers/minikube/: platform.py
sfai/platform/providers/minikube/utils/: checks.py  deploy.py
sfai/ui/: __init__.py  context_display.py
tests/unit/: test_cli_commands.py  test_python_apis.py
